--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <h1 id="title">Etch-A-Sketch</h1>
+    <button id="reset">RESET</button>
     <div id="mainGridContainer"></div>
     <!-- JavaScript import -->
     <script src="script.js"></script>
