--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
-    <!-- css import -->
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- css browser reset -->
     <link rel="stylesheet" type="text/css" href="normalize.css">
 </head>
 
 <body>
     <h1 id="title">Etch-A-Sketch</h1>
-    <button id="reset">RESET</button>
+    <div id="buttonContainer">
+        <button id="resetGrid">RESET</button>
+        <button id="randomColour">RANDOM COLOUR</button>
+        <button id="grayScale">GRAYSCALE</button>
+    </div>
     <div id="mainGridContainer"></div>
-    <!-- JavaScript import -->
     <script src="script.js"></script>
 </body>
 
