Added eraser, random pen, default pen function and made CSS changes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 </head>
 
 <body>
-    <h1 id="title">Etch-A-Sketch</h1>
-    <div id="buttonContainer">
-        <button id="resetGrid">RESET</button>
-        <button id="randomColour">RANDOM COLOUR</button>
-        <button id="grayScale">GRAYSCALE</button>
+    <div id="easContainer">
+        <h1 id="title">Etch-A-Sketch</h1>
+        <div id="buttonContainer">
+            <button id="resetGrid">Reset</button>
+            <button id="defPen">Default Pen</button>
+            <button id="randColPen">Random Pen</button>
+            <button id="erasePen">Eraser</button>
+        </div>
+        <div id="mainGridContainer"></div>
     </div>
-    <div id="mainGridContainer"></div>
     <script src="script.js"></script>
 </body>
 
