Improved code structure

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
 </head>
 
-<body>
-    <div id="easContainer">
-        <h1 id="title">Etch-A-Sketch</h1>
-        <div id="buttonContainer">
-            <button id="resetGrid">Reset</button>
-            <button id="defPen">Default Pen</button>
-            <button id="randColPen">Random Pen</button>
-            <button id="erasePen">Eraser</button>
+<body class="body">
+    <div id="easContainer" class="easContainer">
+        <h1 id="title" class="title">Etch-A-Sketch</h1>
+        <div id="buttonContainer" class="buttonContainer">
+            <button id="resetGrid" class="button">Reset</button>
+            <button id="defPen" class="button">Default Pen</button>
+            <button id="randColPen" class="button">Random Pen</button>
+            <button id="erasePen" class="button">Eraser</button>
         </div>
-        <div id="mainGridContainer"></div>
+        <div id="mainGridContainer" class="mainGridContainer"></div>
     </div>
     <script src="script.js"></script>
 </body>
